# app

./: Dockerfile  README.md  app.py  pyproject.toml
static/css/: index.css
templates/: index.html  prediction.html
